--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Will Povell <william_povell@brown.edu>"]
 edition = "2018"
 
 [dependencies]
-nix = { "git" = "https://github.com/wpovell/nix" }
+nix = { "git" = "https://github.com/nix-rust/nix" }
